2004-10-01  Sushma Rai <rsushma@novell.com>

	* configure.in : Changed the libedata-book version to 1.2
 
2004-10-01  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-provider.c: Include camel-i18n.h now

2004-10-01  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Updated changes to now build with the head
	of evolution. Changed 2.0 to 2.2 versions.

2004-09-30  Dan Winship  <danw@novell.com>

	* mail/mail-stub-exchange.c (send_message): Remove code that was
	setting the message to use HTTP 1.0, which isn't needed with
	libsoup 2.2, and which was probably causing 65685.

2004-09-24  Christophe Merlet  <redfox@redfoxcenter.org>

        * configure.in: Added 'fr' (French) to ALL_LINGUAS

2004-09-23  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-user-dialog.c (addressbook_clicked_cb): Setting
	the window non-modal, so that the user selection dialog
	gets the focus. Fixes #65047

2004-09-22  Craig Jeffares <cjeffares@novell.com>

        * configure.in: Added 'it, zh_CN & zh_TW' to ALL_LINGUAS

2004-09-20  Sushma Rai  <rsushma@novell.com>

	* storage/xc-commands.c (xc_commands_context_menu): 
	Initialized disable_mask and hide_mask, to kill compile
	time warnings.	
	
2004-09-14  Dan Winship  <danw@novell.com>

	* camel/*.c, mail/*.c, addressbook/*.c: documentate

	* camel/camel-stub-constants.h (CamelStubFolderFlags): make this
	an enum rather than #defines, for gtk-doc goodness

	* camel/camel-stub.h (CamelStub): Remove a bunch of unused fields
	(CamelStubNewMessage, CamelStubRemovedMessage,
	CamelStubChangedMessage): Remove unused struct types

2004-09-14  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-hierarchy-favorites.c 
	(exchange_hierarchy_favorites_add_folder): Checking for 
	permanent_uri being NULL. Fixes #65850

2004-09-11  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_changed):
	Removing the just the e-sources if the user changes the 
	account name, and not forgetting the password and 